--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,7 +2,8 @@
     <string name="app_name">GeoQuiz</string>
     <string name="true_button">True</string>
     <string name="false_button">False</string>
-    <string name="next_button">Next</string>
+    <string name="prev_speak">go to previous question</string>
+    <string name="next_speak">go to previous question</string>
     <string name="correct_toast">Correct!</string>
     <string name="incorrect_toast">Incorrect!</string>
     <string name="action_settings">Settings</string>
@@ -15,8 +16,4 @@ and the Indian Ocean.</string>
 in the Americas.</string>
     <string name="question_asia">Lake Baikal is the world\'s oldest and deepest
 freshwater lake.</string>
-    <string name="warning_text">Are you sure you want to do this?</string>
-    <string name="show_answer_button">Show Answer</string>
-    <string name="cheat_button">Cheat!</string>
-    <string name="judgment_toast">Cheating is wrong.</string>
 </resources>
